Add Upload New PDF button for re-uploading files
- Added red 'Upload New PDF' button in control bar
- Resets all state when uploading new file (clears canvas, page info, zoom)
- Updated README with new feature documentation

--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
           <button id="next-page" class="px-3 py-1 bg-gray-200 hover:bg-gray-300 rounded text-gray-700 font-medium">►</button>
         </div>
 
-        <button id="reset-view" class="px-4 py-1 bg-blue-600 hover:bg-blue-700 rounded text-white text-sm">Reset</button>
+        <div class="flex items-center gap-2">
+          <button id="reset-view" class="px-4 py-1 bg-blue-600 hover:bg-blue-700 rounded text-white text-sm">Reset</button>
+          <button id="upload-new" class="px-4 py-1 bg-red-600 hover:bg-red-700 rounded text-white text-sm">Upload New PDF</button>
+        </div>
       </div>
     </div>
   </div>
