Add font detection feature
- Added FontDetector module to extract text content from PDF pages
- Click on PDF canvas to detect font size and family at cursor position
- Added Font Info panel in sidebar showing:
  - Font size in points
  - Font family name
  - Internal PDF font identifier
  - Position coordinates
- Updated PDFRenderer to store current page object for text extraction
- Font detection respects current origin setting (top-left or bottom-left)
- README updated with font detection documentation

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 
         <div class="lg:w-72 space-y-4">
           <div class="bg-white rounded-lg shadow-lg p-4">
+            <h3 class="font-semibold text-gray-700 mb-3">Font Info (Click PDF)</h3>
+            <div id="font-info" class="text-sm text-gray-600">
+              <p>Click on PDF to detect font</p>
+            </div>
+          </div>
+
+          <div class="bg-white rounded-lg shadow-lg p-4">
             <h3 class="font-semibold text-gray-700 mb-3">Units</h3>
             <div class="space-y-2">
               <label class="flex items-center">
@@ -129,6 +136,7 @@
   <script src="js/unit-converter.js"></script>
   <script src="js/pdf-renderer.js"></script>
   <script src="js/coordinate-tracker.js"></script>
+  <script src="js/font-detector.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
